--- a/source/stylesheets/about/intro/_scrolled-message.scss
+++ b/source/stylesheets/about/intro/_scrolled-message.scss
@@ -42,8 +42,19 @@
   }
   h1 {
     text-align: left;
+    // font-family: 'freight-big-pro', 'times', 'georgia', serif;
+    font-family: 'futura-pt', 'futura', 'avenir', 'helvetica', sans-serif;
+    font-size: 2.25em; //47.25px at desktop size 36px at mobile size
+    // font-size: modular-scale(4);
+    font-size: modular-scale(2);
     @include media($large) {
-      font-size: modular-scale(6);
+      // font-size: modular-scale(6);
+      font-size: modular-scale(3);
     }
+    font-weight: 400;
+    color: #4A4A4A;
+    line-height: 1;
   }
 }
+
+
